--- a/laser_joint_projector/CMakeLists.txt
+++ b/laser_joint_projector/CMakeLists.txt
@@ -4,14 +4,14 @@ cmake_minimum_required(VERSION 2.8.3)
 project(laser_joint_projector)
 find_package(catkin REQUIRED COMPONENTS calibration_msgs roscpp geometry_msgs roscpp_serialization)
 
-find_package(kdl_parser)
+find_package(kdl_parser REQUIRED)
 find_package(Eigen REQUIRED)
 find_package(orocos_kdl REQUIRED)
 include_directories(SYSTEM ${Eigen_INCLUDE_DIRS})
 include_directories(include ${catkin_INCLUDE_DIRS})
 include_directories(${kdl_parser_INCLUDE_DIRS})
 include_directories(${orocos_kdl_INCLUDE_DIRS})
-link_directories(${PROJECT_NAME} ${catkin_INCLUDE_DIRS})
+#link_directories(${PROJECT_NAME} ${catkin_INCLUDE_DIRS})
 
 # include_directories(include ${Boost_INCLUDE_DIR} ${catkin_INCLUDE_DIRS})
 # CATKIN_MIGRATION: removed during catkin migration
@@ -32,23 +32,12 @@ link_directories(${PROJECT_NAME} ${catkin_INCLUDE_DIRS})
 # CATKIN_MIGRATION: removed during catkin migration
 # rosbuild_init()
 #set the default path for built executables to the "bin" directory
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
+#set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 #set the default path for built libraries to the "lib" directory
-set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
+#set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
 
 
-add_library(${PROJECT_NAME} src/laser_joint_projector.cpp)
-target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${Boost_LIBRARIES})
-
-add_executable(laser_joint_projector_node src/laser_joint_projector_node.cpp)
-target_link_libraries(laser_joint_projector_node ${PROJECT_NAME} ${catkin_LIBRARIES} ${Eigen_LIBRARIES} ${kdl_parser_LIBRARIES} ${orocos_kdl_LIBRARIES})
-
-add_executable(keyboard_float_generator src/keyboard_float_generator.cpp)
-target_link_libraries(keyboard_float_generator ${catkin_LIBRARIES})
-
-add_executable(time_alignment_node src/time_alignment_node.cpp)
-target_link_libraries(time_alignment_node ${PROJECT_NAME} ${catkin_LIBRARIES} ${Eigen_LIBRARIES} ${kdl_parser_LIBRARIES} ${orocos_kdl_LIBRARIES})
 
 #uncomment if you have defined messages
 
@@ -71,5 +60,16 @@ catkin_package(
     INCLUDE_DIRS ${catkin_INCLUDE_DIRS}# TODO include
     LIBRARIES # TODO
 )
+add_library(${PROJECT_NAME} src/laser_joint_projector.cpp)
+target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${Boost_LIBRARIES})
+
+add_executable(laser_joint_projector_node src/laser_joint_projector_node.cpp)
+target_link_libraries(laser_joint_projector_node ${PROJECT_NAME} ${catkin_LIBRARIES} ${Eigen_LIBRARIES} ${kdl_parser_LIBRARIES} ${orocos_kdl_LIBRARIES})
+
+add_executable(keyboard_float_generator src/keyboard_float_generator.cpp)
+target_link_libraries(keyboard_float_generator ${catkin_LIBRARIES})
+
+add_executable(time_alignment_node src/time_alignment_node.cpp)
+target_link_libraries(time_alignment_node ${PROJECT_NAME} ${catkin_LIBRARIES} ${Eigen_LIBRARIES} ${kdl_parser_LIBRARIES} ${orocos_kdl_LIBRARIES})
 
 
