--- a/laser_joint_projector/package.xml
+++ b/laser_joint_projector/package.xml
@@ -21,6 +21,7 @@
   <build_depend>orocos_kdl</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>roscpp_serialization</build_depend>
+  <build_depend>roscpp</build_depend>
 
   <!-- Dependencies needed after this package is compiled. -->
   <run_depend>roscpp_serialization</run_depend>
