--- a/laser_joint_projector/package.xml
+++ b/laser_joint_projector/package.xml
@@ -22,7 +22,8 @@
   <build_depend>geometry_msgs</build_depend>
   <build_depend>roscpp_serialization</build_depend>
   <build_depend>roscpp</build_depend>
-
+  <build_depend>cmake_modules</build_depend>
+  <run_depend>cmake_modules</run_depend>
   <!-- Dependencies needed after this package is compiled. -->
   <run_depend>roscpp_serialization</run_depend>
   <run_depend>calibration_msgs</run_depend>
